--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="/favicon.png" />
         %sveltekit.head%
     </head>
-    <body>
+    <body class="bg-gray-900 text-gray-100">
         <div class="contents">%sveltekit.body%</div>
     </body>
 </html>
