--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html class="scroll-smooth" lang="en">
+<html class="scrollbar-thin scroll-smooth select-none" lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="/favicon.png" />
         %sveltekit.head%
     </head>
-    <body class="bg-gray-900 text-gray-100">
+    <body class="bg-background text-foreground">
         <div class="contents">%sveltekit.body%</div>
     </body>
 </html>
