--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="/favicon.png" />
+        <title>My API List</title>
+        <meta
+            name="description"
+            content="Discover the top free APIs available."
+        />
         %sveltekit.head%
     </head>
     <body class="bg-background text-foreground">
