--- a/src/app.html
+++ b/src/app.html
@@ -13,19 +13,20 @@
             rel="preload"
             as="font"
             type="font/woff2"
-            href="/recursive-latin-mono-normal.woff2"
+            href="/jost-latin-wght-normal.woff2"
             crossorigin="anonymous"
         />
         <style>
+            /* jost-latin-wght-normal */
             @font-face {
-                font-family: "Recursive Variable";
+                font-family: "Jost Variable";
                 font-style: normal;
                 font-display: block;
-                font-weight: 300 1000;
+                font-weight: 100 900;
                 /* prettier-ignore */
-                src: url("/recursive-latin-mono-normal.woff2") format('woff2-variations');
+                src: url("/jost-latin-wght-normal.woff2") format("woff2-variations");
                 /* prettier-ignore */
-                unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+                unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
             }
         </style>
         %sveltekit.head%
